Enable Glimpse Local w/o sign-in and add in the EF extension now that they have the bug fixed.

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -243,7 +243,8 @@ Sample binding in application.config for iisexpress
   <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      --></glimpse>
+      -->
+  </glimpse>
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier">
