--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -11,7 +11,9 @@
   <package id="EFUtilities" version="0.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Glimpse" version="1.8.6" targetFramework="net45" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.9.1" targetFramework="net45" />
+  <package id="Glimpse.EF6" version="1.6.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
