--- a/DanceCalc/m4d.Tests/App.config
+++ b/DanceCalc/m4d.Tests/App.config
@@ -64,6 +64,10 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.22.0" newVersion="1.9.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
