--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -21,10 +21,10 @@ Sample binding in application.config for iisexpress
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     
     <sectionGroup name="bundleTransformer">
-      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      
       <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
-    </sectionGroup>
+    <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /></sectionGroup>
     <sectionGroup name="jsEngineSwitcher">
       <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
       <section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" />
@@ -138,6 +138,10 @@ Sample binding in application.config for iisexpress
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.22.0" newVersion="1.9.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -249,33 +253,33 @@ Sample binding in application.config for iisexpress
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier">
         <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          
           <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
-        </translators>
-        <postProcessors>
-          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-        </postProcessors>
+        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /></translators>
+        
         <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          
           <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
-        </minifiers>
+        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers>
         <fileExtensions>
-          <add fileExtension=".css" assetTypeCode="Css" />
+          
           <add fileExtension=".less" assetTypeCode="Less" />
-        </fileExtensions>
-      </css>
+        <add fileExtension=".css" assetTypeCode="Css" /></fileExtensions>
+      <postProcessors>
+					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+				</postProcessors></css>
       <js>
-        <translators>
-          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-        </translators>
+        
         <minifiers>
-          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          
           <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
-        </minifiers>
-        <fileExtensions>
-          <add fileExtension=".js" assetTypeCode="JavaScript" />
-        </fileExtensions>
-      </js>
+        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers>
+        
+      <translators>
+					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+				</translators><fileExtensions>
+					<add fileExtension=".js" assetTypeCode="JavaScript" />
+				</fileExtensions></js>
     </core>
     <less useNativeMinification="false" ieCompat="true" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <jsEngine name="MsieJsEngine" />
