--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Contract\packages.config" />
   <repository path="..\DanceLib\packages.config" />
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\m4d.Tests\packages.config" />
@@ -10,4 +11,5 @@
   <repository path="..\music4dance\packages.config" />
   <repository path="..\SDBTests\packages.config" />
   <repository path="..\SongDatabase\packages.config" />
+  <repository path="..\XboxMusicClient\packages.config" />
 </repositories>
