Attempt to make data upload more robust + reformat main dances page

--- a/DanceCalc/m4d.Tests/m4d.Tests.csproj
+++ b/DanceCalc/m4d.Tests/m4d.Tests.csproj
@@ -109,6 +109,8 @@
   <ItemGroup>
     <Content Include="App.config" />
     <Content Include="MvcDiagnostics.aspx" />
+    <Content Include="Test Data\backup-snapshot-a.txt" />
+    <Content Include="Test Data\backup-snapshot-b.txt" />
     <Content Include="Test Data\backup-snapshot.txt" />
     <Content Include="Test Data\TEMPOES.TXT" />
   </ItemGroup>
