Introduce the concept of IDanceMusicContext - refactor IFactories and IUserMap into this with the intention of reviewing how this is factored going forward.  The idea is that this should help the separation of the model from the context.

--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -74,6 +74,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockContext.cs" />
     <Compile Include="MockFactories.cs" />
     <Compile Include="MockUserMap.cs" />
     <Compile Include="SongDetailTests.cs" />
