--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AlbumDetails.cs" />
     <Compile Include="AmazonService.cs" />
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Dance.cs" />
     <Compile Include="DanceRating.cs" />
