Refactor DanceMusicContext into a context, service, and interface.  This allows us to do true mocking of the dbsets and push the service down into the model assembly.  I should now be able to write tests against 90% of what used to be in the dbcontext.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ApplicationUsersController.cs" />
     <Compile Include="Controllers\DanceController.cs" />
+    <Compile Include="Controllers\DMApiController.cs" />
     <Compile Include="Controllers\DMController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
@@ -356,9 +357,7 @@
     <Compile Include="Utilities\TraceLevels.cs" />
     <Compile Include="ViewModels\LocalMerger.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
-    <Compile Include="ViewModels\MergeCluster.cs" />
     <Compile Include="ViewModels\ServiceSearchResults.cs" />
-    <Compile Include="ViewModels\SongCounts.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
   </ItemGroup>
   <ItemGroup>
