Refactor TraceLevel General to live in the model and set it at verbose for unit test & error for the site

--- a/DanceCalc/m4dModels.Tests/App.config
+++ b/DanceCalc/m4dModels.Tests/App.config
@@ -14,4 +14,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.diagnostics>
+    <switches>
+      <!-- This switch controls general messages. In order to 
+         receive general trace messages change the value to the 
+         appropriate level. "1" gives error messages, "2" gives errors 
+         and warnings, "3" gives more detailed error information, and 
+         "4" gives verbose trace information -->
+      <add name="General" value="4" />
+    </switches>
+  </system.diagnostics>
 </configuration>
