--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TrackTests.cs" />
     <Compile Include="AlbumTrackTests.cs" />
     <Compile Include="TagTests.cs" />
+    <Compile Include="TraceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
