Get some basic function testing of load/save of a non-trivial database

--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="AlbumTrackTests.cs" />
     <Compile Include="TagTests.cs" />
     <Compile Include="TraceTest.cs" />
+    <Compile Include="FunctionalTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
@@ -98,6 +99,17 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TestData\test-songs.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\test-tags.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\test-users.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
