Improve song filtering infrastructure: 1) Make parameters type SongFilter - which works by creating a string->SongFilter TypeConverter 2) Make the default SongFilter be Action=Index  and everything else empty - Do this by creating an OnActionExcecuting override on the SongController that sets any null paramater named filter to the default filter 3) Clean up the views so that they all do appropriate pass-throughs

--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -73,6 +73,7 @@
     <Compile Include="IDanceMusicContext.cs" />
     <Compile Include="MergeCluster.cs" />
     <Compile Include="SongCounts.cs" />
+    <Compile Include="SongFilterConverter.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="Dance.cs" />
     <Compile Include="DanceRating.cs" />
