Get search/sort/filter factored down into the model and add simple tests that covers basic searching, sorting and filtering

--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TagTests.cs" />
     <Compile Include="TraceTest.cs" />
     <Compile Include="FunctionalTests.cs" />
+    <Compile Include="SongSortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
