Refactor WebAPI Controllers into a separate directory/namespace

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -276,14 +276,14 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ApplicationUsersController.cs" />
-    <Compile Include="Controllers\DanceController.cs" />
-    <Compile Include="Controllers\DMApiController.cs" />
+    <Compile Include="APIControllers\DanceController.cs" />
+    <Compile Include="APIControllers\DMApiController.cs" />
     <Compile Include="Controllers\DMController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\MusicServiceController.cs" />
-    <Compile Include="Controllers\PurchaseInfoController.cs" />
+    <Compile Include="APIControllers\MusicServiceController.cs" />
+    <Compile Include="APIControllers\PurchaseInfoController.cs" />
     <Compile Include="Controllers\SongController.cs" />
     <Compile Include="Controllers\SongPropertyController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
