--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -23,6 +23,7 @@
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
+  <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="0.9.0-build06428" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Web" version="0.9.0-build06428" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
