Get basic url rewriting working for www, https, index and trailing '/' Also get the web.config transforms working so that the www transform only happens at publication

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -95,6 +95,17 @@ Sample binding in application.config for iisexpress
           </conditions>
           <action type="Redirect" redirectType="Permanent" url="{R:1}" />
         </rule>
+        <rule name="Default Document" stopProcessing="true">
+          <match url="(.*?)/?index$" />
+          <action type="Redirect" url="{R:1}" />
+        </rule>
+        <rule name="Redirect to HTTPS">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="OFF"/>
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{HTTP_URL}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
       </rules>
     </rewrite>
   </system.webServer>
