Add in rel=canonical to page template

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -87,6 +87,10 @@ Sample binding in application.config for iisexpress
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
       <rules>
+        <rule name="Convert to lower case" stopProcessing="true">
+          <match url=".*[A-Z].*" ignoreCase="false" />
+          <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />
+        </rule>
         <rule name="Remove trailing slash" stopProcessing="true">
           <match url="(.*)/$" />
           <conditions>
