--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="TraceTest.cs" />
     <Compile Include="FunctionalTests.cs" />
     <Compile Include="SongSortTests.cs" />
+    <Compile Include="TagFormatTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
