--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -91,14 +91,14 @@ Sample binding in application.config for iisexpress
           <match url=".*[A-Z].*" ignoreCase="false" />
           <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />
         </rule>
-        <rule name="Remove trailing slash" stopProcessing="true">
+        <!--<rule name="Remove trailing slash" stopProcessing="true">
           <match url="(.*)/$" />
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
           <action type="Redirect" redirectType="Permanent" url="{R:1}" />
-        </rule>
+        </rule>-->
         <rule name="Default Document" stopProcessing="true">
           <match url="(.*?)/?index$" />
           <action type="Redirect" url="{R:1}" />
